--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,13 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
     implementation "androidx.activity:activity-ktx:1.7.2"
 
     kapt "com.google.dagger:hilt-android-compiler:2.44.2"
